--- a/szbsc-img-cluster/pom.xml
+++ b/szbsc-img-cluster/pom.xml
@@ -12,6 +12,16 @@
 	<description>物料图片集群</description>
 	<dependencies>
 		<dependency>
+			<groupId>com.szbsc</groupId>
+			<artifactId>szbsc-feign</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.szbsc</groupId>
+			<artifactId>szbsc-common</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
