--- a/szbsc-img-cluster/src/main/resources/application.yml
+++ b/szbsc-img-cluster/src/main/resources/application.yml
@@ -1,20 +1,23 @@
 server:
   port: 9002
+  compression:
+    enabled: true
+    
 
 others:
-  icons: d:/icons
+  icons: d:/icons/
   uploadPath: d:/upload/
-  tmpUploadPath: d:/tmp
+  tmpUploadPath: d:/tmp/
   
 spring:
   datasource:
     master:
-     jdbc-url: jdbc:mysql://192.168.8.127:3316/dosth?serverTimezone=GMT%2B8&autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull    #创建的数据库
+     jdbc-url: jdbc:mysql://192.168.8.127:3316/test?serverTimezone=GMT%2B8&autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull    #创建的数据库
      username: root
      password: 123
      driverClassName: com.mysql.cj.jdbc.Driver
     slave:
-     jdbc-url: jdbc:mysql://192.168.8.127:3326/dosth?serverTimezone=GMT%2B8&autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull    #创建的数据库
+     jdbc-url: jdbc:mysql://192.168.8.127:3326/test?serverTimezone=GMT%2B8&autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull    #创建的数据库
      username: root
      password: 123
      driverClassName: com.mysql.cj.jdbc.Driver
