调整服务提供、消费配置

--- a/szbsc-client/src/main/resources/application.yml
+++ b/szbsc-client/src/main/resources/application.yml
@@ -1,4 +1,28 @@
+server:
+  port: 9102
+
+spring:
+  application:
+    name: consume-service
+    
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
+  
+
 feign:
+  okhttp:
+    enabled: true
+  httpclient:
+    enabled: true
+    max-connections: 1000
+    max-connections-per-route: 100
+  client:
+    config:
+      default:
+        connect-timeout: 10000
+        read-timeout: 10000
   compression:
     request:
       enabled: true
