--- a/szbsc-img-cluster/src/main/resources/application.yml
+++ b/szbsc-img-cluster/src/main/resources/application.yml
@@ -10,6 +10,8 @@ others:
   tmpUploadPath: d:/tmp/
   
 spring:
+  application:
+    name: provider-service
   datasource:
     master:
      jdbc-url: jdbc:mysql://192.168.8.127:3316/test?serverTimezone=GMT%2B8&autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull    #创建的数据库
