--- a/szbsc-jpa-mysql-cluster/src/main/resources/application.yml
+++ b/szbsc-jpa-mysql-cluster/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 server:
   port: 9001
+    
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
+  
   
 spring:
   datasource:
