--- a/szbsc-client/src/main/resources/application.yml
+++ b/szbsc-client/src/main/resources/application.yml
@@ -9,15 +9,21 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
-  
+
+ribbon:
+  http:
+    client:
+      enabled: false
+  okhttp:
+    enabled: true
 
 feign:
   okhttp:
     enabled: true
   httpclient:
-    enabled: true
-    max-connections: 1000
-    max-connections-per-route: 100
+    enabled: false
+    #max-connections: 1000
+    #max-connections-per-route: 100
   client:
     config:
       default:
@@ -26,12 +32,11 @@ feign:
   compression:
     request:
       enabled: true
-      mime-types:
-        - text/html,application/xml
-        - application/json
-      min-request-size: 2048
+      mime-types: text/html,application/xml,application/json
+      min-request-size: 1024
     response:
       enabled: true
+      
 logging:
   level:
     com.szbsc: debug
