--- a/pom.xml
+++ b/pom.xml
@@ -59,5 +59,6 @@
 		<module>szbsc-client</module>
 		<module>szbsc-feign</module>
 		<module>szbsc-common</module>
+		<module>szbsc-quartz</module>
 	</modules>
 </project>
