--- a/szbsc-gateway/src/main/resources/application.yml
+++ b/szbsc-gateway/src/main/resources/application.yml
@@ -1,22 +1,28 @@
 spring:
   application:
-    name: provider-service
-  profiles: 
-    active: peer2-1
+    name: gateway-server
+  cloud:
+    gateway:
+      routes:
+      - id: provider-server
+        uri: lb://provider-service
+        predicates:
+          - Path=/provider/**
     
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
+        
+    
+---
+server:
+  port: 1001
+spring:
+  profiles: peer2-1
   
 ---
 server:
-  port: 2001
-spring:
-  profiles: peer2-1
-
----
-server:
-  port: 2002
+  port: 1002
 spring:
   profiles: peer2-2
