--- a/szbsc-shiro-jwt/src/main/resources/application.yml
+++ b/szbsc-shiro-jwt/src/main/resources/application.yml
@@ -1,2 +1,28 @@
+spring:
+  application:
+    name: jwt-service
+  redis:
+    password: 123
+    cluster:
+      nodes: 127.0.0.1:6380,127.0.0.1:6381,127.0.0.1:6382,127.0.0.1:6383,127.0.0.1:6384,127.0.0.1:6385
+      max-redirects: 3
+    lettuce:
+      pool:
+        max-active: 1000 # 连接池最大连接数,负值表示没有限制
+        max-idle: 10 # 连接池中最大的空闲连接
+        min-idle: 5 # 连接池中最小的空闲连接
+        max-wait: -1 # 连接池最大阻塞等待时间,负值表示没有限制
+
 server:
   port: 8001
+  
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
+  instance:
+    hostname: 192.168.8.127
+    instance-id: 192.168.8.127:8001
+    prefer-ip-address: true
+    
+  
