--- a/szbsc-gateway/pom.xml
+++ b/szbsc-gateway/pom.xml
@@ -12,12 +12,23 @@
 	<description>gateway</description>
 	<dependencies>
 		<dependency>
+			<groupId>com.szbsc</groupId>
+			<artifactId>szbsc-shiro-jwt</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+            <classifier>jdk15</classifier>
 		</dependency>
 	</dependencies>
 </project>
