授权与验证和公共部分

--- a/pom.xml
+++ b/pom.xml
@@ -64,5 +64,6 @@
 		<module>szbsc-gateway</module>
 		<module>szbsc-shiro-jwt</module>
 		<module>szbsc-jwt</module>
+		<module>szbsc-auth</module>
 	</modules>
 </project>
