--- a/szbsc-jwt/src/main/resources/application.yml
+++ b/szbsc-jwt/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   profiles: jwt
   
-passjava:
+szbsc:
   jwt:
     enabled: true # 是否开启JWT登录认证
     secret: passjava # JWT私钥,用于校验JWT令牌的合法性
