--- a/szbsc-jpa-mysql-cluster/src/main/resources/application.yml
+++ b/szbsc-jpa-mysql-cluster/src/main/resources/application.yml
@@ -10,12 +10,12 @@ eureka:
 spring:
   datasource:
     master:
-     jdbc-url: jdbc:mysql://192.168.8.127:3316/dosth?serverTimezone=GMT%2B8&autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull    #创建的数据库
+     jdbc-url: jdbc:mysql://192.168.8.127:3316/test?serverTimezone=GMT%2B8&autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull    #创建的数据库
      username: root
      password: 123
      driverClassName: com.mysql.cj.jdbc.Driver
     slave:
-     jdbc-url: jdbc:mysql://192.168.8.127:3326/dosth?serverTimezone=GMT%2B8&autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull    #创建的数据库
+     jdbc-url: jdbc:mysql://192.168.8.127:3326/test?serverTimezone=GMT%2B8&autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull    #创建的数据库
      username: root
      password: 123
      driverClassName: com.mysql.cj.jdbc.Driver
